# caxur

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  check_output.txt  check_output_2.txt  docker-compose.yml  test_ec_private.pem  test_ec_private_pkcs8.pem  test_ec_public.pem  test_priv_key.pem
.agent/rules/: project_rules.md  tech_stack.md
.github/: copilot-instructions.md
conductor/: product-guidelines.md  product.md  tech-stack.md
migrations/: 20251128142735_create_users_table.sql  20251129143535_create_refresh_tokens_table.sql  20251206221300_create_roles_table.sql
scripts/: generate_keys.sh
src/: main.rs
src/domain/: access_scope.rs  administrators.rs  auth.rs  mod.rs  password.rs  permissions.rs  roles.rs  users.rs
src/infrastructure/: auth.rs  db.rs  mod.rs  password.rs  state.rs
src/presentation/: dtos.rs  mod.rs  openapi.rs  router.rs
src/shared/: error.rs  mod.rs  pagination.rs  query.rs  response.rs  validation.rs
tests/: administrators_test.rs  auth_test.rs  db_test.rs  health_test.rs  infrastructure_test.rs  lib.rs  middleware_tests.rs  permissions_test.rs  refresh_tokens_test.rs  roles_test.rs  users_test.rs
tests/application/: auth_admin_login_test.rs  auth_login_test.rs  auth_refresh_test.rs  main.rs  mod.rs  roles_create_test.rs  roles_get_permissions_test.rs  roles_permissions_test.rs  roles_update_test.rs  users_create_test.rs  users_list_test.rs  users_update_test.rs
tests/common/: mod.rs
tests/infrastructure/: db.rs  main.rs  repositories.rs
tests/integration/: administrators.rs  auth.rs  health.rs  (+7 more)
(+57 files in other folders)
