[package]
name = "caxur"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.7"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "time", "macros"] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["serde"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.7", features = ["cors", "trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
